--- a/TestMdfEntityFramework/Views/Home.xaml
+++ b/TestMdfEntityFramework/Views/Home.xaml
@@ -51,7 +51,8 @@
                         FontSize="35"
                         FontWeight="Bold"
                         Foreground="White"/>
-                <Image Grid.Column="0" Grid.Row="1" Width="200" Height="300" 
+                <Image x:Name="imgLogoHome"
+                    Grid.Column="0" Grid.Row="1" Width="300" Height="300" 
                     HorizontalAlignment="Center" 
                     VerticalAlignment="Top"  
                     Source="../SCS/IMG/logo_tisa_consola_multitarifa.png"/>
