--- a/TestMdfEntityFramework/Views/Configuracionv2.xaml
+++ b/TestMdfEntityFramework/Views/Configuracionv2.xaml
@@ -866,7 +866,7 @@
                             </Grid>
                         </Button>
                         <!--#endregion-->
-                        <!--#region BOTON AGREGAR TARIFA FIJA -->
+                        <!--#region BOTON ELIMINAR TARIFA FIJA -->
                         <Button x:Name="btnEliminar_TarifaFija" 
                             Grid.Column="5" Grid.Row="3"
                             Width="30" Height="30" 
@@ -1452,7 +1452,14 @@
                            FontWeight="Bold" 
                            VerticalAlignment="Center" 
                            HorizontalAlignment="Center"/>
-                        <TextBox x:Name="txtPathImagenDenominacion" 
+                        <ComboBox x:Name="cmbImagenesDenominaciones"
+                          Grid.Row="3" Grid.Column="2"
+                          Grid.ColumnSpan="4"
+                          Background="Transparent"
+                          BorderBrush="White" FontSize="15" 
+                          Margin="0,5,10,5"
+                          Style="{DynamicResource COMBOSTYLE}" />
+                        <!--<TextBox x:Name="txtPathImagenDenominacion" 
                              VerticalAlignment="Top"
                              Grid.Row="3" 
                              Grid.Column="2"  
@@ -1463,7 +1470,8 @@
                              Grid.ColumnSpan="4"
                              Height="30"
                              Text=" "
-                             Style="{DynamicResource TEXTBOXSTYLE}"/>
+                             Style="{DynamicResource TEXTBOXSTYLE}"/>-->
+                        
 
                         <TextBlock Grid.Row="4" 
                            Grid.Column="1"
@@ -1484,6 +1492,44 @@
 
 
 
+                        <!--#endregion-->
+                        <!--#region BOTON AGREGAR TARIFA FIJA -->
+                        <Button x:Name="btnAgregar_Denominacion" 
+                            Grid.Column="5" Grid.Row="4"
+                            Width="30" Height="30" 
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Right"
+                            Margin="0,0,10,0"
+                            Style="{DynamicResource BTNSTYLE}" 
+                            Click="btnAgregar_Denominacion_Click">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <Image Grid.Column="3" Width="30" Height="30"
+                                    Source="../SCS/IMG/plus.png" 
+                                    VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                            </Grid>
+                        </Button>
+                        <!--#endregion-->
+                        <!--#region BOTON ELIMINAR TARIFA FIJA -->
+                        <Button x:Name="btnEliminar_Denominacion" 
+                            Grid.Column="5" Grid.Row="4"
+                            Width="30" Height="30" 
+                            VerticalAlignment="Center"
+                            HorizontalAlignment="Right"
+                            Margin="0,0,50,0"
+                            Style="{DynamicResource BTNSTYLE}" 
+                            Click="btnEliminar_Denominacion_Click">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <Image Grid.Column="3" Width="30" Height="30"
+                                    Source="../SCS/IMG/delete.png" 
+                                    VerticalAlignment="Top" HorizontalAlignment="Center"/>
+                            </Grid>
+                        </Button>
                         <!--#endregion-->
 
                         <!--#region GRID -->
@@ -1684,7 +1730,7 @@
                             Background="GreenYellow"
                             Margin="0,0,0,0"
                             Style="{DynamicResource BTNSTYLE}" 
-                            Click="btnGuardarConfiguracion_Click">
+                            Click="btnGuardarConfiguracionUbicacion_Click">
                             <Grid>
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="10"></ColumnDefinition>
